src/Lab1/ExprParser.g4
parser grammar ExprParser;
options { tokenVocab=ExprLexer; }

program
    : (stat
    | def)* EOF
    ;

stat: ID '=' expr ';'
    | expr ';'
    ;

def : ID '(' ID (',' ID)* ')' '{' stat* '}' ;

expr: ID
    | INT
    | func
    | 'not' expr
    | expr 'and' expr
    | expr 'or' expr
    ;

func : ID '(' expr (',' expr)* ')' ;
